# VegaFEM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
cmake/: vegafemConfig.cmake.in
libraries/animationHelper/: handleControl.cpp  handleControl.h  handleScript.cpp  handleScript.h  simulationRecorder.cpp  simulationRecorder.h
libraries/basicAlgorithms/: averagingBuffer.cpp  averagingBuffer.h  basicAlgorithms.h  containerHelper.cpp  containerHelper.h  disjointSet.cpp  disjointSet.h  fileIO.cpp  fileIO.h  filterIterator.h  hashHelper.h  range.h  reversibleHeap.h  stringHelper.cpp  stringHelper.h  uniqueIntegerID.cpp  uniqueIntegerID.h  uniqueRecentQueue.h  vectorStack.h
libraries/camera/: camera.cpp  camera.h  cameraChangeLoad.cpp  cameraChangeLoad.h
libraries/clothBW/: clothBW.cpp  clothBW.h  clothBWFromObjMesh.cpp  clothBWFromObjMesh.h
libraries/configFile/: configFile.cpp  configFile.h
libraries/constrainedDOFs/: constrainedDOFs.cpp  constrainedDOFs.h
libraries/corotationalLinearFEM/: corotationalLinearFEM.cpp  corotationalLinearFEM.h
libraries/distanceField/: closestPointField.cpp  closestPointField.h  computeField.cpp  computeFieldNarrowBand.cpp  distanceField.cpp  distanceField.h  distanceFieldBase.cpp  distanceFieldBase.h  distanceFieldCreator.cpp  distanceFieldCreator.h  distanceFieldNarrowBand.cpp  distanceFieldNarrowBand.h  marchingCubes.cpp  marchingCubes.h  marchingCubesTable.h  signedDistanceFieldFromPolygonSoup.cpp  signedDistanceFieldFromPolygonSoup.h
libraries/elasticForceModel/: StVKForceModel.cpp  StVKForceModel.h  clothBWForceModel.cpp  clothBWForceModel.h  corotationalLinearFEMForceModel.cpp  corotationalLinearFEMForceModel.h  isotropicHyperelasticFEMForceModel.cpp  isotropicHyperelasticFEMForceModel.h  linearFEMForceModel.cpp  linearFEMForceModel.h  massSpringSystemForceModel.cpp  massSpringSystemForceModel.h
libraries/exactArithmetic/: er.cpp  er.h  er_toDouble.cpp  planeER.cpp  planeER.h  vec3ER.cpp  vec3ER.h
libraries/forceModel/: finiteDifferenceTester.cpp  finiteDifferenceTester.h  forceModel.cpp  forceModel.h
libraries/getopts/: commandLineParser.cpp  commandLineParser.h  getopts.cpp  getopts.h
libraries/glslPhong/: glslPhong.cpp  glslPhong.h
libraries/graph/: graph.cpp  graph.h
libraries/hashTable/: hashTable.cpp  hashTable.h
libraries/imageIO/: imageIO.cpp  imageIO.h
libraries/immersionMesher/: immersionGraphNode.cpp  immersionGraphNode.h  immersionMesher.h  immersionMesherBuildGraph.cpp  immersionMesherCellComplex.cpp  immersionMesherGenerateTetMesh.cpp
libraries/include/: macros.h  triple.h  valueIndex.h  vegalong.h
libraries/integrator/: getIntegratorSolver.cpp  getIntegratorSolver.h  integratorBase.cpp  integratorBase.h
libraries/integratorDense/: IPIVC.h  centralDifferencesDense.cpp  centralDifferencesDense.h  implicitBackwardEulerDense.cpp  implicitBackwardEulerDense.h  implicitNewmarkDense.cpp  implicitNewmarkDense.h  implicitNewmarkDenseMulti1D.cpp  implicitNewmarkDenseMulti1D.h  integratorBaseDense.cpp  integratorBaseDense.h  integratorMulti1D.cpp  integratorMulti1D.h
libraries/integratorSparse/: centralDifferencesSparse.cpp  centralDifferencesSparse.h  eulerSparse.cpp  eulerSparse.h  implicitBackwardEulerSparse.cpp  implicitBackwardEulerSparse.h  implicitNewmarkSparse.cpp  implicitNewmarkSparse.h  integratorBaseSparse.cpp  integratorBaseSparse.h
libraries/interpolationCoordinates/: barycentricCoordinates.cpp  barycentricCoordinates.h  interpolationCoordinates.h
libraries/isotropicHyperelasticFEM/: MooneyRivlinIsotropicMaterial.cpp  MooneyRivlinIsotropicMaterial.h  StVKIsotropicMaterial.cpp  StVKIsotropicMaterial.h  homogeneousMooneyRivlinIsotropicMaterial.cpp  homogeneousMooneyRivlinIsotropicMaterial.h  homogeneousNeoHookeanIsotropicMaterial.cpp  homogeneousNeoHookeanIsotropicMaterial.h  homogeneousStVKIsotropicMaterial.cpp  homogeneousStVKIsotropicMaterial.h  isotropicHyperelasticFEM.cpp  isotropicHyperelasticFEM.h  isotropicMaterial.cpp  isotropicMaterial.h  isotropicMaterialWithCompressionResistance.cpp  isotropicMaterialWithCompressionResistance.h  neoHookeanIsotropicMaterial.cpp  neoHookeanIsotropicMaterial.h
libraries/laplacianMatrix/: laplacianMatrix.cpp  laplacianMatrix.h
libraries/libiglInterface/: iglRemeshSelfIntersection.cpp  iglRemeshSelfIntersection.h
libraries/lighting/: cameraLighting.cpp  cameraLighting.h  lighting.cpp  lighting.h
libraries/listIO/: listIO.cpp  listIO.h
libraries/massSpringSystem/: massSpringSystem.cpp  massSpringSystem.h  massSpringSystemFromCubicMesh.cpp  massSpringSystemFromCubicMesh.h  massSpringSystemFromCubicMeshConfigFile.cpp  massSpringSystemFromCubicMeshConfigFile.h  (+10 more)
scripts/: install_windows.bat  uniformize_header_guard.py
snippets/: example_polarDecompositionGradientDriver.cpp  example_rigidBodyDynamics.cpp  example_sparseMatrix.cpp
utilities/: CMakeLists.txt
utilities/clothBW-rt/: clothBW-rt.cpp  initGraphics.cpp  initGraphics.h
utilities/computeDistanceField/: computeDistanceField.cpp
utilities/displayObj/: displayObj.cpp
utilities/editShapeARAP/: editShapeARAP.cpp
utilities/finiteDifferenceTest/: finiteDifferenceTest.cpp
utilities/immersionMesher/: immersionMesher.cpp
utilities/interactiveDeformableSimulator/: initGraphics.cpp  initGraphics.h  interactiveDeformableSimulator.cpp
utilities/isosurfaceMesher/: isosurfaceMesher.cpp
utilities/largeModalDeformationFactory/: canvas.cpp  canvas.h  convert.cpp  cubicPolynomials.cpp  frequencies.cpp  interpolate.cpp  largeModalDeformationFactory.h  linearModes.cpp  modalDerivatives.cpp  nonlinearModes.cpp  renderingMesh.cpp  runtime.cpp  simulationMesh.cpp  sketch.cpp
utilities/objMergeFiles/: objMergeFiles.cpp
utilities/reducedDynamicSolver-rt/: initGraphics.cpp  initGraphics.h  reducedDynamicSolver-rt.cpp
utilities/tetMesher/: tetMesher.cpp
utilities/virtualTetsDriver/: virtualTetsDriver.cpp
utilities/volumetricMeshUtilities/: generateInterpolant.cpp  generateInterpolationMatrix.cpp  generateMassMatrix.cpp  generateSurfaceMesh.cpp
(+337 files in other folders)
